src/test/ui/auto-traits/typeck-default-trait-impl-constituent-types-2.stderr
error[E0277]: the trait bound `MyS2: MyTrait` is not satisfied in `(MyS2, MyS)`
  --> $DIR/typeck-default-trait-impl-constituent-types-2.rs:17:5
   |
LL | fn is_mytrait<T: MyTrait>() {}
   |                  ------- required by this bound in `is_mytrait`
...
LL |     is_mytrait::<(MyS2, MyS)>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ within `(MyS2, MyS)`, the trait `MyTrait` is not implemented for `MyS2`
   |
   = note: required because it appears within the type `(MyS2, MyS)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
